--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -6,13 +6,95 @@
     <title>Inbox</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="dark-mode.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        .container {
+            display: grid;
+
+            grid-template-areas:
+                "header header header"
+                "nav content content"
+                "footer footer footer";
+
+            grid-template-columns: 200px 1fr 200px;
+            grid-template-rows: auto 1fr auto;
+            grid-gap: 10px;
+
+            height: 100vh;
+        }
+
+        header {
+            grid-area: header;
+        }
+
+        nav {
+            grid-area: nav;
+            margin-left: 0.5rem;
+        }
+
+        main {
+            grid-area: content;
+        }
+
+        aside {
+            grid-area: side;
+            margin-right: 0.5rem;
+        }
+
+        footer {
+            grid-area: footer;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Inbox</h1>
+   
     
-    <div th:each="folder : ${userFolders}">
-        <p th:text="${folder.label}"></p>
-    </div>
+    <div class="container">
+        <header>
+            <nav class="navbar">
+                <h3 class="navbar-brand mr-auto">Hello, Name</h3>
+                <nav class="navbar-nav">
+                   <div class="nav-link">
+                    <div class="form-check form-switch">
+                        <input type="checkbox" class="form-check-input" id="darkSwitch" />
+                        <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+                    </div>
+                   </div> 
+                </nav>
+            </nav>
+        </header>
+      
+        <nav>
+            <div class="card">
+                <h5 class="card-header">Folders</h5>
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li th:each="folder : ${userFolders}" 
+                            class="list-group-item d-flex justify-content-between align-items-center">
+                        <span th:text="${folder.label}">Label</span>
+                        <span class="badge bg-primary rounded-pill">14</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+      
+        <main>
+          <p>Email list</p>
+        </main>
+      
+        <footer>
+          <!-- Footer content -->
+        </footer>
+      </div>      
+    
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="dark-mode-switch.min.js"></script>
 </body>
 </html>
