--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -23,6 +23,9 @@
 
             height: 100vh;
         }
+        .sidebar{
+            margin-bottom: 20px;
+        }
 
         header {
             grid-area: header;
@@ -67,18 +70,8 @@
         </header>
       
         <nav>
-            <div class="card">
-                <h5 class="card-header">Folders</h5>
-                <div class="card-body">
-                    <ul class="list-group">
-                        <li th:each="folder : ${userFolders}" 
-                            class="list-group-item d-flex justify-content-between align-items-center">
-                        <span th:text="${folder.label}">Label</span>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div th:insert="components/folder-list :: folder-list (panelName='Folders', folders=${userDefaultFolders})" class="sidebar"></div>
+            <div th:insert="components/folder-list :: folder-list (panelName = 'User Folders', folders = ${userFolders})" class="sidebar"></div> 
         </nav>
       
         <main>
