--- a/src/main/resources/templates/email-page.html
+++ b/src/main/resources/templates/email-page.html
@@ -75,20 +75,21 @@
         </nav>
       
         <main>
-            <div class="card" th:if="${emailList}">
-                <h5 class="card-header" th:text="${folderName}">Inbox</h5>
-                <div class="card-body">
-                    <div class="list-group">
-                        <a th:each="message : ${emailList}" th:href="@{'/emails/'+ ${message.key.timeUUiID}}" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1" th:text="${message.subject}">List group item heading</h5>
-                            <small th:text="${message.agoTimeString}">3 days ago</small>
-                          </div>
-                          <p class="mb-1" th:text="${message.to}">Some placeholder content in a paragraph.</p>
-                        </a>
-                      </div>
-                    
-                </div>
+            <div class="card">
+                <h5 class="card-header">View Email</h5>
+                <dl class="card-body">
+                    <dt>From</dt>
+                    <dd th:text="${email.from}"></dd>
+
+                    <dt>To</dt>
+                    <dd th:text="${toIds}"></dd>
+
+                    <dt>Subject</dt>
+                    <dd th:text="${email.subject}"></dd>
+
+                    <dt>Body</dt>
+                    <dd th:text="${email.body}"></dd>
+                </dl>
             </div>
         
         </main>
