--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -70,29 +70,32 @@
         </header>
       
         <nav>
-            <div class="card">
-                <a href="/compose" class="btn btn-primary">Compose Message</a>
-            </div>
-            
             <div th:insert="components/folder-list :: folder-list (panelName='Folders', folders=${userDefaultFolders})" class="sidebar"></div>
             <div th:insert="components/folder-list :: folder-list (panelName = 'User Folders', folders = ${userFolders})" class="sidebar"></div> 
         </nav>
       
         <main>
-            <div class="card" th:if="${emailList}">
-                <h5 class="card-header" th:text="${folderName}">Inbox</h5>
-                <div class="card-body">
-                    <div class="list-group">
-                        <a th:each="message : ${emailList}" th:href="@{'/emails/'+ ${message.key.timeUUiID}}" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1" th:text="${message.subject}">List group item heading</h5>
-                            <small th:text="${message.agoTimeString}">3 days ago</small>
+            <div class="card">
+                <h5 class="card-header">Create New Email</h5>
+                <dl class="card-body">
+                    <form>
+                        <div class="mb-3">
+                          <label for="toIds" class="form-label">To</label>
+                          <input type="text" th:value="${toIds}" class="form-control" id="toIds" aria-describedby="emailHelp">
+                          <div id="toIdsHelp" class="form-text">Enter comma seperated GitHub IDs of your receipients</div>
+                        </div>
+                        <div class="mb-3">
+                          <label for="subject" class="form-label">Subject</label>
+                          <input type="text" class="form-control" id="subject">
+                        </div>
+                        <div class="mb-3">
+                            <label for="body" class="form-label">Body</label>
+                            <textarea type="text" rows="10" class="form-control" id="body"></textarea>
                           </div>
-                          <p class="mb-1" th:text="${message.to}">Some placeholder content in a paragraph.</p>
-                        </a>
-                      </div>
-                    
-                </div>
+                        
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </dl>
             </div>
         
         </main>
